# lpgbt-docs-mcp

./: .gitignore  build_index.py  pyproject.toml
src/lpgbt_docs_mcp/: db.py  driver_parser.py  html_parser.py  register_parser.py  server.py
